// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkbox [snapshot] > md, checked: false, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, checked: false, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, checked: true, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, checked: true, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, disabled, checked: false, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    disabled=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, disabled, checked: false, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    disabled=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, disabled, checked: true, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    disabled=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, disabled, checked: true, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    disabled=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, checked: false, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, checked: false, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, checked: true, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, checked: true, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, disabled, checked: false, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    disabled=""
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, disabled, checked: false, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    disabled=""
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, disabled, checked: true, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    disabled=""
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, disabled, checked: true, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    disabled=""
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, checked: false, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, checked: false, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, checked: true, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, checked: true, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, disabled, checked: false, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    disabled=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, disabled, checked: false, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    disabled=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, disabled, checked: true, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    disabled=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, disabled, checked: true, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    disabled=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, checked: false, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, checked: false, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, checked: true, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, checked: true, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, disabled, checked: false, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    disabled=""
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, disabled, checked: false, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    class="vesper-checkbox-input"
    disabled=""
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, disabled, checked: true, indeterminate: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    disabled=""
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, disabled, checked: true, indeterminate: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <input
    aria-label="Checkbox text"
    checked=""
    class="vesper-checkbox-input"
    disabled=""
    required=""
    type="checkbox"
  />
  <div
    class="vesper-checkbox-box"
  >
    <div
      class="vesper-checkbox-indicator"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Checkbox text *
  </span>
</label>
`;
